# claux

./: Cargo.toml  Makefile  README.md  shell.nix  tuishot.toml
.github/workflows/: ci.yml  release.yml
src/: bootstrap.rs  cli.rs  commands.rs  compact.rs  config.rs  context.rs  cost.rs  db.rs  main.rs  permissions.rs  plugin.rs  query.rs  repl.rs  session.rs  test_support.rs  theme.rs  utils.rs
src/api/: anthropic.rs  mod.rs  openai_compat.rs  provider.rs  stream.rs  types.rs
src/config/: trust.rs
src/tools/: agent.rs  bash.rs  edit.rs  glob.rs  grep.rs  mcp.rs  mod.rs  read.rs  todo.rs  web_fetch.rs  write.rs
src/tools/web_fetch/: html.rs  policy.rs
src/tui/: chat.rs  home.rs  markdown.rs  mod.rs  screen.rs  terminal.rs  ui.rs
src/utils/: diff.rs
